<resources>
    <string name="app_name">Coffee Shop Application</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="tab_text_1">Menu</string>
    <string name="tab_text_2">Cart</string>
    <string name="tab_text_3">Manage</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navagation drawer</string>
    <string name="drawer_close">Close navigation bar</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="manage">Manage</string>
    <string name="checkout">Checkout</string>
</resources>