<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuMenu"
        android:title="@string/menu" />
    <item
        android:id="@+id/cartMenu"
        android:title="@string/cart" />
    <item
        android:id="@+id/manageMenu"
        android:title="@string/manage" />
    <item
        android:id="@+id/checkoutMenu"
        android:title="@string/checkout" />
    <item
        android:id="@+id/profileMenu"
        android:title="@string/profile"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/settingsMenu"
        android:title="@string/settings"
        app:showAsAction="never|collapseActionView" />
</menu>